--- a/index.html
+++ b/index.html
@@ -4,35 +4,44 @@
         <meta charset="utf-8">
         <title>Shanghai Park</title>
         <!-- library reqs -->
+        <script type="text/javascript" src="public/js/jquery-3.4.1.min.js"></script>
+        <script type="text/javascript" src="public/js/bootstrap.bundle.min.js"></script>
         <link rel="stylesheet" type="text/css" href="public/css/bootstrap.min.css">
-        <style type="text/javascript" src="public/js/bootstrap.bundle.min.js"></style>
-        <style type="text/javascript" src="public/js/jquery-3.4.1.min.js"></style>
         <!-- own -->
         <link rel="stylesheet" type="text/css" href="public/css/index.css">
     </head>
     <body>
         <!-- navigation bar and header -->
-        <nav class="container navbar navbar-expand-md navbar-light">
-            <!-- hamburger -->
-            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="navbarCollapse" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+        <nav class="navbar navbar-expand-md navbar-light container">
+            <img src="public/img/shanghai_park_logo.png" class="img-fluid navbar-brand" width="100px" height="auto" alt="Shanghai Park">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <!-- logo -->
-            <div class="navbar-brand">
-                <h1>Shanghai Park</h1>
-            </div>
-            <!-- navigation items -->
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-                <ul class="navbar-nav green">
-                    <li class="nav-item white bg-green"><a href="#" class="nav-link">The House</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">The House</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">The House</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">The House</a></li>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">The House</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Flats</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Environment</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Gallery</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Map</a>
+                    </li>
                 </ul>
             </div>
         </nav>
-        <div class="container-fluid">
-            <img src="public/img/shanghai_park_main.png" class="img-fluid" width="100%" height="auto">
+        <div class="container-fluid banner parallax">
+            <h1>AHA</h1>
         </div>
 
     </body>
