--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav green">
                     <li class="nav-item active">
                         <a class="nav-link" href="#">The House</span></a>
                     </li>
@@ -41,7 +41,7 @@
             </div>
         </nav>
         <div class="container-fluid banner parallax">
-            <h1>AHA</h1>
+            <h1>Homes for life</h1>
         </div>
 
     </body>
