--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Shanghai Park</title>
         <!-- library reqs -->
         <script type="text/javascript" src="public/js/jquery-3.4.1.min.js"></script>
@@ -12,37 +13,80 @@
     </head>
     <body>
         <!-- navigation bar and header -->
-        <nav class="navbar navbar-expand-md navbar-light container">
-            <img src="public/img/shanghai_park_logo.png" class="img-fluid navbar-brand" width="100px" height="auto" alt="Shanghai Park">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav green">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">The House</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Flats</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Environment</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Gallery</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Map</a>
-                    </li>
-                </ul>
+        <!-- actually, I'm not sure from the task description if it should or allowed 
+        to be a fixed navbar, but I found it more a conveniant sollution :p-->
+        <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
+            <div class="container">
+                <img src="public/img/shanghai_park_logo.png" class="img-fluid navbar-brand" width="100px" height="auto" alt="Shanghai Park">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse row navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav green">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">The House</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Flats</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Environment</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Gallery</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contact</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Map</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </nav>
-        <div class="container-fluid banner parallax">
-            <h1>Homes for life</h1>
+        <div class="banner">
+            <div class="parallax"></div>
+            <div class="container">
+                <h1 class="banner-text bg-green">Homes for life</h1>
+            </div>
         </div>
-
     </body>
 </html>
+
+
+
+<!-- 
+working shit shouldn't be lost
+
+<nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
+            <div class="container">
+                <img src="public/img/shanghai_park_logo.png" class="img-fluid navbar-brand" width="100px" height="auto" alt="Shanghai Park">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse row navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav green">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">The House</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Flats</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Environment</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Gallery</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contact</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Map</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+-->
