Az a buzi szöveg is megvan a headerben

--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
         <!-- actually, I'm not sure from the task description if it should or allowed 
         to be a fixed navbar, but I found it more a conveniant sollution :p-->
         <div class="fakeBackground">
-            <div class="blackRow d-none d-md-block text-right">
-                <h1>AHA</h1>
+            <div class="blackRow d-none d-md-block">
+                <div class="container d-flex flex-row align-items-center justify-content-end">
+                    <div class="my-2">"The mos lucrative investment I have ever made" +36 1 555-5555 <a href="#" class="disabled">EN</a>|<a href="#" class="disabled">HU</a></div>
+                </div>
             </div>
         </div>
         <nav class="navbar navbar-expand-md navbar-light">
