Filled up with content and styled stuff

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             <a class="nav-link" href="#">Flats</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Environment</a>
+                            <a class="nav-link" href="#">Environments</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Gallery</a>
@@ -58,6 +58,63 @@
             <div class="parallax"></div>
             <div class="container">
                 <h1 class="banner-text bg-green">Homes for life</h1>
+            </div>
+        </div>
+        <!-- The actual content -->
+        <div class="container" id="actualContent">
+            <div class="row">
+                <!-- The House -->
+                <div class="col-12 col-md-6 content">
+                    <h1>Shanghai Park</h1>
+                    <p>
+                        When designing the 144 flat condominium, the aim was to create low-maintence, purpose-built flats, with a welcoming and comfortable feel; making the new owners feel at home. as soon as they step through the front door. Whether young people looking for a starter-home, or families with children - there is something for everyone. The flats range in size from studio flats to 3 bedrooms.
+                    </p>
+                    <p>
+                        Citizen Park is not just a confominium, but a comlex habitat, designed with people at the heart of it. It has the advantage of its own garden and a plaground.
+                    </p>
+                    <p>
+                        Construction is currently underway.
+                    </p>
+                </div>
+                <div class="col-12 col-md-6">
+                    <img src="public/img/shanghai_park_building.png" alt="Shanghai park" class="img-fluid">
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid bg-gray my-5 p-5">
+            <!-- The Flat-->
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-md-6">
+                        <img src="public/img/shanghai_park_flat.png" alt="" class="img-fluid">
+                    </div>
+                    <div class="col-12 col-md-6 text-right white content">
+                        <h1>Flats</h1>
+                        <p>Every flat in Citizen Park has been designed with future residents' needs in mind so all of them are practical and can be furnished easily.</p>
+                        <p>Choose your dream flat now!</p>
+                        <a href="#" class="btn btn-md bg-greenDark white">Check the flats </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <!-- Environment -->
+            <div class="row">
+                <div class="col-12 col-md-6 text-left content">
+                    <h1>Environments</h1>
+                    <p>
+                        Citizn Park is being built in the center of Angyalföld on a quiet, leafy street, in Jász utca.
+                    </p>
+                    <p>
+                        The 13th District is one of the fastest developing areas in Budapest. The excellent transport links and renewed infrastructure makes Angyalföld a very desirable area for house-hunters.
+                    </p>
+                    <p>
+                        The neighbourhood is family-friendly and boasts a range of community facilities, amenities and open spaces: shops, playgrounds, kindergardens, schools, a park and a pharmacy. Furthurmore there is a quick and easy access to the city centre by car, through Lehel út and Róbert Károly körút. or by using regular bus and tram services; giving the residents of Citizen Park the best of both worlds - the tranquilty of Angyalföld and the hustle and bustle of the city centre.
+                    </p>
+                </div>
+                <div class="col-12 col-md-6">
+                    <img src="public/img/shanghai_park_environments.png" alt="Shanghai park" class="img-fluid">
+                </div>
             </div>
         </div>
     </body>
