Gallery added. Modal window on image click missing

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <!-- navigation bar and header -->
-        <!-- actually, I'm not sure from the task description if it should or allowed 
+        <!-- actually, I'm not sure from the task description if it should or allowed
         to be a fixed navbar, but I found it more a conveniant sollution :p-->
         <div class="fakeBackground">
             <div class="blackRow d-none d-md-block">
@@ -61,27 +61,29 @@
             </div>
         </div>
         <!-- The actual content -->
-        <div class="container" id="actualContent">
-            <div class="row">
-                <!-- The House -->
-                <div class="col-12 col-md-6 content">
-                    <h1>Shanghai Park</h1>
-                    <p>
-                        When designing the 144 flat condominium, the aim was to create low-maintence, purpose-built flats, with a welcoming and comfortable feel; making the new owners feel at home. as soon as they step through the front door. Whether young people looking for a starter-home, or families with children - there is something for everyone. The flats range in size from studio flats to 3 bedrooms.
-                    </p>
-                    <p>
-                        Citizen Park is not just a confominium, but a comlex habitat, designed with people at the heart of it. It has the advantage of its own garden and a plaground.
-                    </p>
-                    <p>
-                        Construction is currently underway.
-                    </p>
-                </div>
-                <div class="col-12 col-md-6">
-                    <img src="public/img/shanghai_park_building.png" alt="Shanghai park" class="img-fluid">
+        <div class="container-fluid bg-white p-5" id="actualContent">
+            <div class="container">
+                <div class="row">
+                    <!-- The House -->
+                    <div class="col-12 col-md-6 content">
+                        <h1>Shanghai Park</h1>
+                        <p>
+                            When designing the 144 flat condominium, the aim was to create low-maintence, purpose-built flats, with a welcoming and comfortable feel; making the new owners feel at home. as soon as they step through the front door. Whether young people looking for a starter-home, or families with children - there is something for everyone. The flats range in size from studio flats to 3 bedrooms.
+                        </p>
+                        <p>
+                            Citizen Park is not just a confominium, but a comlex habitat, designed with people at the heart of it. It has the advantage of its own garden and a plaground.
+                        </p>
+                        <p>
+                            Construction is currently underway.
+                        </p>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <img src="public/img/shanghai_park_building.png" alt="Shanghai park" class="img-fluid">
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="container-fluid bg-gray my-5 p-5">
+        <div class="container-fluid bg-gray p-5">
             <!-- The Flat-->
             <div class="container">
                 <div class="row">
@@ -97,32 +99,86 @@
                 </div>
             </div>
         </div>
-        <div class="container">
-            <!-- Environment -->
-            <div class="row">
-                <div class="col-12 col-md-6 text-left content">
-                    <h1>Environments</h1>
-                    <p>
-                        Citizn Park is being built in the center of Angyalföld on a quiet, leafy street, in Jász utca.
-                    </p>
-                    <p>
-                        The 13th District is one of the fastest developing areas in Budapest. The excellent transport links and renewed infrastructure makes Angyalföld a very desirable area for house-hunters.
-                    </p>
-                    <p>
-                        The neighbourhood is family-friendly and boasts a range of community facilities, amenities and open spaces: shops, playgrounds, kindergardens, schools, a park and a pharmacy. Furthurmore there is a quick and easy access to the city centre by car, through Lehel út and Róbert Károly körút. or by using regular bus and tram services; giving the residents of Citizen Park the best of both worlds - the tranquilty of Angyalföld and the hustle and bustle of the city centre.
-                    </p>
-                </div>
-                <div class="col-12 col-md-6">
-                    <img src="public/img/shanghai_park_environments.png" alt="Shanghai park" class="img-fluid">
+        <div class="container-fluid bg-grayLight p-5">
+            <div class="container">
+                <!-- Environment -->
+                <div class="row">
+                    <div class="col-12 col-md-6 text-left content">
+                        <h1>Environments</h1>
+                        <p>
+                            Citizn Park is being built in the center of Angyalföld on a quiet, leafy street, in Jász utca.
+                        </p>
+                        <p>
+                            The 13th District is one of the fastest developing areas in Budapest. The excellent transport links and renewed infrastructure makes Angyalföld a very desirable area for house-hunters.
+                        </p>
+                        <p>
+                            The neighbourhood is family-friendly and boasts a range of community facilities, amenities and open spaces: shops, playgrounds, kindergardens, schools, a park and a pharmacy. Furthurmore there is a quick and easy access to the city centre by car, through Lehel út and Róbert Károly körút. or by using regular bus and tram services; giving the residents of Citizen Park the best of both worlds - the tranquilty of Angyalföld and the hustle and bustle of the city centre.
+                        </p>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <img src="public/img/shanghai_park_environments.png" alt="Shanghai park" class="img-fluid">
+                    </div>
                 </div>
             </div>
+        </div>
+        <div class="container-fluid">
+            <div class="container gallery">
+                <!-- GALLERY -->
+                <div class="row">
+                    <div class="col-12 content text-center">
+                        <h1>Gallery</h1>
+                    </div>
+                </div>
+                <div class="row images">
+                    <div class="col-12 col-md-3">
+                        <img src="public/img/shanghai_park_01.jpg" class="img-fluid p-2 rounded image">
+                    </div>
+                    <div class="col-12 col-md-3">
+                        <img src="public/img/shanghai_park_02.jpg" class="img-fluid p-2 rounded image">
+                    </div>
+                    <div class="col-12 col-md-3">
+                        <img src="public/img/shanghai_park_03.jpg" class="img-fluid p-2 rounded image">
+                    </div>
+                    <div class="col-12 col-md-3">
+                        <img src="public/img/shanghai_park_04.jpg" class="img-fluid p-2 rounded image">
+                    </div>
+                </div>
+                <div class="row images">
+                    <div class="col-12 col-md-3">
+                        <img src="public/img/shanghai_park_05.jpg" class="img-fluid p-2 rounded image">
+                    </div>
+                    <div class="col-12 col-md-3">
+                        <img src="public/img/shanghai_park_06.jpg" class="img-fluid p-2 rounded image">
+                    </div>
+                    <div class="col-12 col-md-3">
+                        <img src="public/img/shanghai_park_07.jpg" class="img-fluid p-2 rounded image">
+                    </div>
+                    <div class="col-12 col-md-3">
+                        <img src="public/img/shanghai_park_08.jpg" class="img-fluid p-2 rounded image">
+                    </div>
+                </div>
+                <div class="row images">
+                    <div class="col-12 col-md-3">
+                        <img src="public/img/shanghai_park_09.jpg" class="img-fluid p-2 rounded image">
+                    </div>
+                    <div class="col-12 col-md-3">
+                        <img src="public/img/shanghai_park_10.jpg" class="img-fluid p-2 rounded image">
+                    </div>
+                    <div class="col-12 col-md-3">
+                        <img src="public/img/shanghai_park_11.jpg" class="img-fluid p-2 rounded image">
+                    </div>
+                    <div class="col-12 col-md-3">
+                        <img src="public/img/shanghai_park_12.jpg" class="img-fluid p-2 rounded image">
+                    </div>
+                </div>
+            <div>
         </div>
     </body>
 </html>
 
 
 
-<!-- 
+<!--
 working shit shouldn't be lost
 
 <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
