--- a/index.html
+++ b/index.html
@@ -171,8 +171,18 @@
                         <img src="public/img/shanghai_park_12.jpg" class="img-fluid p-2 rounded image">
                     </div>
                 </div>
-            <div>
+            </div>
+            <!-- Modal -->
+            <div id="galleryModal" class="modal">
+                <!-- The Close Button -->
+                <span class="close">&times;</span>
+                <!-- Modal Content (The Image) -->
+                <img class="modal-content" id="modalImage">
+            </div>
+
+
         </div>
+        <script type="text/javascript" src="public/js/index.js"></script>
     </body>
 </html>
 
