Website is filled with every content section

--- a/index.html
+++ b/index.html
@@ -86,24 +86,24 @@
         <div class="container-fluid bg-gray p-5">
             <!-- The Flat-->
             <div class="container">
-                <div class="row">
+                <div class="row content">
                     <div class="col-12 col-md-6">
                         <img src="public/img/shanghai_park_flat.png" alt="" class="img-fluid">
                     </div>
-                    <div class="col-12 col-md-6 text-right white content">
+                    <div class="col-12 col-md-6 text-right white">
                         <h1>Flats</h1>
                         <p>Every flat in Citizen Park has been designed with future residents' needs in mind so all of them are practical and can be furnished easily.</p>
                         <p>Choose your dream flat now!</p>
-                        <a href="#" class="btn btn-md bg-greenDark white">Check the flats </a>
+                        <button class="btn btn-md bg-greenDark white">Check the flats </button>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="container-fluid bg-grayLight p-5">
+        <div class="container-fluid bg-white p-5">
             <div class="container">
                 <!-- Environment -->
-                <div class="row">
-                    <div class="col-12 col-md-6 text-left content">
+                <div class="row content">
+                    <div class="col-12 col-md-5 text-left">
                         <h1>Environments</h1>
                         <p>
                             Citizn Park is being built in the center of Angyalföld on a quiet, leafy street, in Jász utca.
@@ -115,13 +115,16 @@
                             The neighbourhood is family-friendly and boasts a range of community facilities, amenities and open spaces: shops, playgrounds, kindergardens, schools, a park and a pharmacy. Furthurmore there is a quick and easy access to the city centre by car, through Lehel út and Róbert Károly körút. or by using regular bus and tram services; giving the residents of Citizen Park the best of both worlds - the tranquilty of Angyalföld and the hustle and bustle of the city centre.
                         </p>
                     </div>
-                    <div class="col-12 col-md-6">
-                        <img src="public/img/shanghai_park_environments.png" alt="Shanghai park" class="img-fluid">
+                    <div class="col-12 col-md-7">
+                        <div id="environmentImage">
+                            <img src="public/img/shanghai_park_environments.png" alt="Shanghai park" width="100%" height="auto">
+                            <span></span>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="container-fluid">
+        <div class="container-fluid py-5 bg-grayLight">
             <div class="container gallery">
                 <!-- GALLERY -->
                 <div class="row">
@@ -131,44 +134,40 @@
                 </div>
                 <div class="row images">
                     <div class="col-12 col-md-3">
-                        <img src="public/img/shanghai_park_01.jpg" class="img-fluid p-2 rounded image">
+                        <img src="public/img/shanghai_park_01.jpg" class="img-fluid p-2 image">
                     </div>
                     <div class="col-12 col-md-3">
-                        <img src="public/img/shanghai_park_02.jpg" class="img-fluid p-2 rounded image">
+                        <img src="public/img/shanghai_park_02.jpg" class="img-fluid p-2 image">
                     </div>
                     <div class="col-12 col-md-3">
-                        <img src="public/img/shanghai_park_03.jpg" class="img-fluid p-2 rounded image">
+                        <img src="public/img/shanghai_park_03.jpg" class="img-fluid p-2 image">
                     </div>
                     <div class="col-12 col-md-3">
-                        <img src="public/img/shanghai_park_04.jpg" class="img-fluid p-2 rounded image">
-                    </div>
-                </div>
-                <div class="row images">
-                    <div class="col-12 col-md-3">
-                        <img src="public/img/shanghai_park_05.jpg" class="img-fluid p-2 rounded image">
+                        <img src="public/img/shanghai_park_04.jpg" class="img-fluid p-2 image">
                     </div>
                     <div class="col-12 col-md-3">
-                        <img src="public/img/shanghai_park_06.jpg" class="img-fluid p-2 rounded image">
+                        <img src="public/img/shanghai_park_05.jpg" class="img-fluid p-2 image">
                     </div>
                     <div class="col-12 col-md-3">
-                        <img src="public/img/shanghai_park_07.jpg" class="img-fluid p-2 rounded image">
+                        <img src="public/img/shanghai_park_06.jpg" class="img-fluid p-2 image">
                     </div>
                     <div class="col-12 col-md-3">
-                        <img src="public/img/shanghai_park_08.jpg" class="img-fluid p-2 rounded image">
-                    </div>
-                </div>
-                <div class="row images">
-                    <div class="col-12 col-md-3">
-                        <img src="public/img/shanghai_park_09.jpg" class="img-fluid p-2 rounded image">
+                        <img src="public/img/shanghai_park_07.jpg" class="img-fluid p-2 image">
                     </div>
                     <div class="col-12 col-md-3">
-                        <img src="public/img/shanghai_park_10.jpg" class="img-fluid p-2 rounded image">
+                        <img src="public/img/shanghai_park_08.jpg" class="img-fluid p-2 image">
                     </div>
                     <div class="col-12 col-md-3">
-                        <img src="public/img/shanghai_park_11.jpg" class="img-fluid p-2 rounded image">
+                        <img src="public/img/shanghai_park_09.jpg" class="img-fluid p-2 image">
                     </div>
                     <div class="col-12 col-md-3">
-                        <img src="public/img/shanghai_park_12.jpg" class="img-fluid p-2 rounded image">
+                        <img src="public/img/shanghai_park_10.jpg" class="img-fluid p-2 image">
+                    </div>
+                    <div class="col-12 col-md-3">
+                        <img src="public/img/shanghai_park_11.jpg" class="img-fluid p-2 image">
+                    </div>
+                    <div class="col-12 col-md-3">
+                        <img src="public/img/shanghai_park_12.jpg" class="img-fluid p-2 image">
                     </div>
                 </div>
             </div>
@@ -179,9 +178,85 @@
                 <!-- Modal Content (The Image) -->
                 <img class="modal-content" id="modalImage">
             </div>
-
-
         </div>
+        <!-- contact -->
+        <div class="container-fluid bg-white py-5">
+            <div class="container">
+                <div class="row content">
+                    <div class="col-12 col-md-6">
+                        <h1>Contact</h1>
+                        <p>Skills str. 36<br>Budapest</p>
+                        <p>Email: info@shangaipark.hu</p>
+                        <p>Phone: <a class="greenDark">+36 1 555 555</a></p>
+                    </div>
+                    <div class="col-12 col-md-6" id="contactForm">
+                        <form action="#" method="#">
+                            <div class="form-group">
+                                <label for="firstName">First name</label>
+                                <input type="text" name="firstName" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <label for="lastName">Last name</label>
+                                <input type="text" name="lastName" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <label for="email">E-mail</label>
+                                <input type="email" name="email" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <label for="email">E-mail</label>
+                                <input type="email" name="email" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <label for="phone">Phone</label>
+                                <input type="tel" name="phone" class="form-control" placeholder="+36123456789">
+                            </div>
+                            <div class="form-group">
+                                <label for="message">Message</label>
+                                <textarea name="message" class="form-control" ></textarea>
+                            </div>
+                            <button type="submit" class="btn btn-md bg-green white">Send message</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- MAP -->
+        <div class="container-fluid py-5 bg-grayLight">
+            <div class="container content">
+                <div class="col-12 text-center">
+                    <h1>Map</h1>
+                </div>
+                <div class="col-12">
+                    <div id="map">
+                        <img src="public/img/shanghai_park_map.png" width="100%" height="auto" class="img-fluid"></img>
+                        <div class="zoom">
+                            <button class="btn btn-md bg-grayLight green">+</button>
+                            <button class="btn btn-md bg-grayLight green">-</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- footer -->
+        <div class="container-fluid bg-gray">
+            <div class="container py-5">
+                <div class="row">
+                    <div class="col-12 white text-center">
+                        <p>Copyright 2020 Shanghai Park</p>
+                        <hr class="bg-white">
+                    </div>
+                    <div class="col-12 d-md white text-center">
+                        <p>
+                            We handle your personal data according to the <a class="greenDark">Privacy Policy</a>.<br>
+                            If you would like to get information about wich data we store or if you would like us to delete your data, please contact us at <a class="greenDark">info@shanghaipark.hu</a>.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+        <!-- own javascript -->
         <script type="text/javascript" src="public/js/index.js"></script>
     </body>
 </html>
