--- a/index.html
+++ b/index.html
@@ -33,22 +33,22 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav green">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">The House</span></a>
+                            <a class="nav-link" href="#theHouse">The House</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Flats</a>
+                            <a class="nav-link" href="#flats">Flats</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Environments</a>
+                            <a class="nav-link" href="#environments">Environments</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Gallery</a>
+                            <a class="nav-link" href="#gallery">Gallery</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
+                            <a class="nav-link" href="#contact">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Map</a>
+                            <a class="nav-link" href="#map">Map</a>
                         </li>
                     </ul>
                 </div>
@@ -60,11 +60,12 @@
                 <h1 class="banner-text bg-green">Homes for life</h1>
             </div>
         </div>
+        
         <!-- The actual content -->
-        <div class="container-fluid bg-white p-5" id="actualContent">
+        <!-- The House -->
+        <div class="container-fluid bg-white p-5 firstContent" id="theHouse">
             <div class="container">
                 <div class="row">
-                    <!-- The House -->
                     <div class="col-12 col-md-6 content">
                         <h1>Shanghai Park</h1>
                         <p>
@@ -83,8 +84,8 @@
                 </div>
             </div>
         </div>
-        <div class="container-fluid bg-gray p-5">
-            <!-- The Flat-->
+        <!-- The Flat-->
+        <div class="container-fluid bg-gray p-5" id="flats">
             <div class="container">
                 <div class="row content">
                     <div class="col-12 col-md-6">
@@ -99,9 +100,9 @@
                 </div>
             </div>
         </div>
-        <div class="container-fluid bg-white p-5">
+        <!-- Environment -->
+        <div class="container-fluid bg-white p-5" id="environments">
             <div class="container">
-                <!-- Environment -->
                 <div class="row content">
                     <div class="col-12 col-md-5 text-left">
                         <h1>Environments</h1>
@@ -124,9 +125,9 @@
                 </div>
             </div>
         </div>
-        <div class="container-fluid py-5 bg-grayLight">
+        <!-- GALLERY -->        
+        <div class="container-fluid py-5 bg-grayLight" id="gallery">
             <div class="container gallery">
-                <!-- GALLERY -->
                 <div class="row">
                     <div class="col-12 content text-center">
                         <h1>Gallery</h1>
@@ -180,7 +181,7 @@
             </div>
         </div>
         <!-- contact -->
-        <div class="container-fluid bg-white py-5">
+        <div class="container-fluid bg-white py-5" id="contact">
             <div class="container">
                 <div class="row content">
                     <div class="col-12 col-md-6">
@@ -222,7 +223,7 @@
             </div>
         </div>
         <!-- MAP -->
-        <div class="container-fluid py-5 bg-grayLight">
+        <div class="container-fluid py-5 bg-grayLight" id="map">
             <div class="container content">
                 <div class="col-12 text-center">
                     <h1>Map</h1>
