--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <script type="text/javascript" src="public/js/jquery-3.4.1.min.js"></script>
         <script type="text/javascript" src="public/js/bootstrap.bundle.min.js"></script>
         <link rel="stylesheet" type="text/css" href="public/css/bootstrap.min.css">
+        
+        <script type="text/javascript" src="public/js/all.js"></script>
         <!-- own -->
         <link rel="stylesheet" type="text/css" href="public/css/index.css">
     </head>
@@ -95,7 +97,7 @@
                         <h1>Flats</h1>
                         <p>Every flat in Citizen Park has been designed with future residents' needs in mind so all of them are practical and can be furnished easily.</p>
                         <p>Choose your dream flat now!</p>
-                        <button class="btn btn-md bg-greenDark white" data-toggle="modal" data-target="#flatSelection">Check the flats </button>
+                        <button class="btn btn-md bg-greenDark white" data-toggle="modal" data-target="#flatSelection">Check the flats <i class="fas fa-chevron-right"></i></button>
                     </div>
                     <!-- flat selection modal -->
                     <div class="modal fade " id="flatSelection" tabindex="-1" role="dialog" aria-hidden="true">
@@ -255,7 +257,7 @@
                                 <label for="message">Message</label>
                                 <textarea name="message" class="form-control" ></textarea>
                             </div>
-                            <button type="submit" class="btn btn-md bg-green white">Send message</button>
+                            <button type="submit" class="btn btn-md bg-green white">Send message <i class="fas fa-chevron-right"></i></button>
                         </form>
                     </div>
                 </div>
@@ -271,8 +273,8 @@
                     <div id="map">
                         <img src="public/img/shanghai_park_map.png" width="100%" height="auto" class="img-fluid"></img>
                         <div class="zoom">
-                            <button class="btn btn-md bg-grayLight green">+</button>
-                            <button class="btn btn-md bg-grayLight green">-</button>
+                            <button class="btn btn-md bg-grayLight green" id="plusBtn"><i class="fas fa-plus"></i></button>
+                            <button class="btn btn-md bg-grayLight green" id="minusBtn"><i class="fas fa-minus"></i></button>
                         </div>
                     </div>
                 </div>
@@ -299,40 +301,3 @@
         <script type="text/javascript" src="public/js/index.js"></script>
     </body>
 </html>
-
-
-
-<!--
-working shit shouldn't be lost
-
-<nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
-            <div class="container">
-                <img src="public/img/shanghai_park_logo.png" class="img-fluid navbar-brand" width="100px" height="auto" alt="Shanghai Park">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse row navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav green">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">The House</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Flats</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Environment</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Gallery</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Map</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
--->
