--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                         <p>Copyright 2020 Shanghai Park</p>
                         <hr class="bg-white">
                     </div>
-                    <div class="col-12 d-md white text-center">
+                    <div class="col-12 d-none d-md-block white text-center">
                         <p>
                             We handle your personal data according to the <a class="greenDark">Privacy Policy</a>.<br>
                             If you would like to get information about wich data we store or if you would like us to delete your data, please contact us at <a class="greenDark">info@shanghaipark.hu</a>.
