--- a/index.html
+++ b/index.html
@@ -173,42 +173,7 @@
                     </div>
                 </div>
                 <div class="row images">
-                    <div class="col-12 col-md-3">
-                        <img src="public/img/shanghai_park_01.jpg" class="img-fluid p-2 image">
-                    </div>
-                    <div class="col-12 col-md-3">
-                        <img src="public/img/shanghai_park_02.jpg" class="img-fluid p-2 image">
-                    </div>
-                    <div class="col-12 col-md-3">
-                        <img src="public/img/shanghai_park_03.jpg" class="img-fluid p-2 image">
-                    </div>
-                    <div class="col-12 col-md-3">
-                        <img src="public/img/shanghai_park_04.jpg" class="img-fluid p-2 image">
-                    </div>
-                    <div class="col-12 col-md-3">
-                        <img src="public/img/shanghai_park_05.jpg" class="img-fluid p-2 image">
-                    </div>
-                    <div class="col-12 col-md-3">
-                        <img src="public/img/shanghai_park_06.jpg" class="img-fluid p-2 image">
-                    </div>
-                    <div class="col-12 col-md-3">
-                        <img src="public/img/shanghai_park_07.jpg" class="img-fluid p-2 image">
-                    </div>
-                    <div class="col-12 col-md-3">
-                        <img src="public/img/shanghai_park_08.jpg" class="img-fluid p-2 image">
-                    </div>
-                    <div class="col-12 col-md-3">
-                        <img src="public/img/shanghai_park_09.jpg" class="img-fluid p-2 image">
-                    </div>
-                    <div class="col-12 col-md-3">
-                        <img src="public/img/shanghai_park_10.jpg" class="img-fluid p-2 image">
-                    </div>
-                    <div class="col-12 col-md-3">
-                        <img src="public/img/shanghai_park_11.jpg" class="img-fluid p-2 image">
-                    </div>
-                    <div class="col-12 col-md-3">
-                        <img src="public/img/shanghai_park_12.jpg" class="img-fluid p-2 image">
-                    </div>
+                    <!-- javascript gonna fill this up -->
                 </div>
             </div>
             <!-- Modal -->
